@@ -722,9 +722,8 @@ class WikilogCommentFormatter
 			);
 		}
 
-		$date = $wgContLang->date( $comment->mTimestamp );
-		$time = $wgContLang->time( $comment->mTimestamp );
-		$permalink = $this->getCommentPermalink( $comment, $date, $time );
+		list( $date, $time, $tz ) = WikilogUtils::getLocalDateTime( $comment->mTimestamp );
+		$permalink = $this->getCommentPermalink( $comment, $date, $time, $tz );
 
 		$extra = array();
 		if ( $this->mShowItem && $comment->mItem ) {
@@ -738,11 +737,9 @@ class WikilogCommentFormatter
 		{
 			if ( $comment->mUpdated != $comment->mTimestamp ) {
 				# Comment was edited.
+				list( $updDate, $updTime, $updTz ) = WikilogUtils::getLocalDateTime( $comment->mUpdated );
 				$extra[] = $this->mSkin->link( $comment->mCommentTitle,
-					wfMsgForContent( 'wikilog-comment-note-edited',
-						$wgContLang->date( $comment->mUpdated, true ),
-						$wgContLang->time( $comment->mUpdated, true )
-					),
+					wfMsgForContent( 'wikilog-comment-note-edited', $updDate, $updTime, $updTz ),
 					array( 'title' => wfMsg( 'wikilog-comment-history' ) ),
 					array( 'action' => 'history' ), 'known'
 				);
@@ -838,9 +835,10 @@ class WikilogCommentFormatter
 	 * @param $comment Comment.
 	 * @param $date Comment date.
 	 * @param $time Comment time.
+	 * @param $tz Comment timezone information.
 	 * @return HTML fragment.
 	 */
-	protected function getCommentPermalink( $comment, $date, $time ) {
+	protected function getCommentPermalink( $comment, $date, $time, $tz ) {
 		if ( $comment->mID ) {
 			if ( $this->mPermalinkTitle ) {
 				$title = $this->mPermalinkTitle;
@@ -849,11 +847,11 @@ class WikilogCommentFormatter
 				$title = $comment->mCommentTitle;
 			}
 			return $this->mSkin->link( $title,
-				wfMsg( 'wikilog-comment-permalink', $date, $time ),
+				wfMsg( 'wikilog-comment-permalink', $date, $time, $tz ),
 				array( 'title' => wfMsg( 'permalink' ) )
 			);
 		} else {
-			return wfMsg( 'wikilog-comment-permalink', $date, $time );
+			return wfMsg( 'wikilog-comment-permalink', $date, $time, $tz );
 		}
 	}
 
